--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,98 @@
-.container{
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:space-between;
-}
-
-.flex-item{
-    display:flex;
-    align-items:center;
-    margin:10px;
-    padding:20px;
-    border:10px solid blue;
-}
-
-#calculator{
-/*make this twice the size of others */
-flex-grow:3;
-min-height: 200px;
+body,
+html {
+	width: 100%;
+	height: 100%;
+    background-color: #616c72;
+    
 
 }
-#laptop
-{
-flex-grow:1;
+
+main {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	width: 100%;
+}
+header {
+    padding: 1.25em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #c22424;
+    color: #fff8f8;
 }
 
-@media screen and (max-width:1000px)
- {
+header h1 {
+    display: inline-block;
+    font-size: 2em;
+}
+
+ nav {
+   
+    margin-right: 1.1em;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.5em;
+
+}
+
+
+
+ nav ul li {
+    display: inline-block;
+    margin-left: 1.4em;
+    text-decoration: underline;
+    color: #fff8f8;
+} 
+a {
+    color: #ffffff;
     
 }
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .flex-left{
+    width: 25%;        
+}
+.flex-right {
+    width: 75%;
+}
+
+.image-grid{
+    --gap: 16px;
+    --num-cols: 4;
+    --row-height: 300px;
+    box-sizing: border-box;
+    padding: var(--gap);  
+    display:grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap:var(--gap);
+  }
+  
+  .image-grid > img {
+  width:100%;
+  height: 100%;
+  object-fit: cover;  
+  }
+  
+  .image-grid-col-2{
+    grid-column: span 4;
+  }
+  .image-grid-col-2-2{
+    grid-column: span 2;
+  }
+  .image-grid-row-2{
+    grid-row:span 1;
+  }
+.page-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color:white
+  }
+ 
+ .page-footer ul {
+    margin-bottom: 0;
+  }
