added grid layout for projects in css, add profile pic in index.html, made the webpage responsive with flex.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
-body,
+/* body,
 html {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
     background-color: #616c72;
-    
-
-}
+} */
 
 main {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+    color: white
+}
+
+.profile-pic{
+    width:250px;
+    height:300px;
+    padding-left: 0px;
+    border:5px solid #c22424;
+    margin-left:20px;
+
 }
 header {
     padding: 1.25em;
@@ -25,8 +33,8 @@ header h1 {
     font-size: 2em;
 }
 
- nav {
-   
+nav {
+
     margin-right: 1.1em;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -36,63 +44,223 @@ header h1 {
 
 
 
- nav ul li {
+nav ul li {
     display: inline-block;
     margin-left: 1.4em;
     text-decoration: underline;
     color: #fff8f8;
-} 
-a {
-    color: #ffffff;
-    
-}
-.flex-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-  .flex-left{
-    width: 25%;        
-}
-.flex-right {
-    width: 75%;
 }
 
-.image-grid{
-    --gap: 16px;
+a {
+    color: #ffffff;
+}
+
+h2 {
+    display: inline-block;
+    font-size: 1.75em;
+    color: #fff8f8;
+}
+
+h3 {
+    display: inline-block;
+    font-size: 1.5em;
+    color: #e9b0b0;
+}
+
+p {
+    color: white;
+    font-size: 1.5em
+}
+
+h5 a {
+    color: #ffffff;
+    background-color: #c22424;
+    font-size: 1.1em;
+}
+
+
+
+
+
+@media all and (max-width: 768px) {
+    .flexbox {
+        width: 100%;
+    }
+
+    :root {
+        font-size: 24px;
+    }
+
+    body, main, section {
+        display: flex;   
+        background-color: #616c72;    
+        }
+      body, section {
+        flex-direction: column;       
+      }
+
+}
+
+@media all and (min-width: 768px) {
+    :root {
+        font-size: 16px;
+    }
+
+    @media screen and (max-width:1024px) {
+        .image-grid {
+            --num-cols: 2;
+            --row-height: 200px;
+
+        }
+
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .flex-left {
+        width: 25%;
+    }
+
+    .flex-right {
+        width: 75%;
+    }
+
+    body, main, section {
+        display: flex;   
+        background-color: #616c72;    
+        }
+      body, section {
+        flex-direction: column;       
+      }
+
+.image-grid {
+    --gap: 10px;
     --num-cols: 4;
     --row-height: 300px;
     box-sizing: border-box;
-    padding: var(--gap);  
-    display:grid;
+    padding: var(--gap);
+    display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
     grid-auto-rows: var(--row-height);
-    gap:var(--gap);
-  }
-  
-  .image-grid > img {
-  width:100%;
-  height: 100%;
-  object-fit: cover;  
-  }
-  
-  .image-grid-col-2{
+    gap: var(--gap);
+    background-color: #616c72;
+
+}
+
+.image-grid>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-grid-col-2 {
     grid-column: span 4;
-  }
-  .image-grid-col-2-2{
-    grid-column: span 2;
-  }
-  .image-grid-row-2{
-    grid-row:span 1;
-  }
+
+}
+
+.image-grid-col-2-2 {
+    grid-column: span 1;
+    width: 50%;
+
+}
+
+.image-grid-row-2 {
+    grid-row: span 1;
+    width: 100%;
+}
+
+.box-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    justify-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.box-caption {
+    position: absolute;
+    max-width: 200px;
+    word-break: break-word;
+    font-size: 2em;
+}
+
+/* Standard: Top Center */
+.box-flex {
+    display: flex;
+    flex-flow: row;
+
+    align-items: flex-start;
+    /* justify-content: center; */
+    position: relative;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.2rem;
+    word-break: break-word;
+    background-color: #616c72;
+    color: #d9d9d9;
+}
+
+/* Box: Center Center */
+.box-flex-center {
+    align-items: center;
+}
+
+/* Box: Bottom Center */
+.box-flex-bottom {
+    align-items: flex-end;
+}
+
+/* Box: Top Right */
+.box-flex-top-right {
+    justify-content: flex-end;
+}
+
+/* Box: Top Right */
+.box-flex-top-left {
+    justify-content: flex-start;
+}
+
+/* Box: Center Left */
+.box-flex-center-left {
+    align-items: center;
+    justify-content: flex-start;
+}
+
+/* Box: Bottom Right */
+.box-flex-bottom-right {
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+/* align-self: flex-start */
+.align-start {
+    align-self: flex-start;
+}
+
+/* align-self: center */
+.align-center {
+    align-self: center;
+}
+
+/* align-self: flex-end */
+.align-end {
+    align-self: flex-end;
+}
+
 .page-footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    color:white
-  }
- 
- .page-footer ul {
+    color: white
+}
+
+.page-footer ul {
     margin-bottom: 0;
-  }
+}
+}
