--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header {
 
 header h1 {
     display: inline-block;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 nav {
@@ -38,11 +38,15 @@ nav {
     margin-right: 1.1em;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.5em;
+    font-size: 2em;
 
 }
 
-
+h5 {
+    color: #ffffff;
+    background-color: #c22424;
+    font-size: 1.1em;    
+}
 
 nav ul li {
     display: inline-block;
@@ -72,18 +76,14 @@ p {
     font-size: 1.5em
 }
 
-h5 a {
-    color: #ffffff;
-    background-color: #c22424;
-    font-size: 1.1em;
-}
+
 
 
 
 
 
 @media all and (max-width: 768px) {
-    .flexbox {
+     .flexbox {
         width: 100%;
     }
 
@@ -99,7 +99,13 @@ h5 a {
         flex-direction: column;       
       }
 
-}
+
+        .image-grid {
+            --num-cols: 4;
+            --row-height: 100%;
+        
+    }
+  }
 
 @media all and (min-width: 768px) {
     :root {
@@ -120,15 +126,15 @@ h5 a {
         flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
-    }
+     }
 
     .flex-left {
         width: 25%;
-    }
+     }
 
     .flex-right {
         width: 75%;
-    }
+     }
 
     body, main, section {
         display: flex;   
@@ -138,10 +144,9 @@ h5 a {
         flex-direction: column;       
       }
 
-.image-grid {
-    --gap: 10px;
-    --num-cols: 4;
-    --row-height: 300px;
+ .image-grid {
+    
+    
     box-sizing: border-box;
     padding: var(--gap);
     display: grid;
@@ -150,29 +155,34 @@ h5 a {
     gap: var(--gap);
     background-color: #616c72;
 
-}
+ }
 
-.image-grid>img {
+
+ .image-grid>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+ }
 
 .image-grid-col-2 {
     grid-column: span 4;
 
-}
+ }
 
 .image-grid-col-2-2 {
     grid-column: span 1;
     width: 50%;
 
-}
-
+ }
 .image-grid-row-2 {
+    grid-row: span 2;
+    width: 100%;
+ }
+
+.image-grid-row-2-2 {
     grid-row: span 1;
     width: 100%;
-}
+ }
 
 .box-grid {
     display: grid;
@@ -181,20 +191,21 @@ h5 a {
     justify-items: center;
     margin: 0;
     padding: 0;
-}
+ }
 
 .box-caption {
     position: absolute;
     max-width: 200px;
     word-break: break-word;
-    font-size: 2em;
-}
+    font-size: 2em; 
+    top: 10px;
+    left: 10px; 
+ }
 
-/* Standard: Top Center */
-.box-flex {
+ .box-flex-lg {
     display: flex;
     flex-flow: row;
-
+    flex-grow: 1;
     align-items: flex-start;
     /* justify-content: center; */
     position: relative;
@@ -204,39 +215,55 @@ h5 a {
     word-break: break-word;
     background-color: #616c72;
     color: #d9d9d9;
-}
+ }
+
+/* Standard: Top Center */
+.box-flex {
+    display: flex;
+    flex-flow: row;
+    flex-grow: 1;
+    align-items: flex-start;
+    /* justify-content: center; */
+    position: relative;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.2rem;
+    word-break: break-word;
+    background-color: #616c72;
+    color: #d9d9d9;
+ }
 
 /* Box: Center Center */
 .box-flex-center {
     align-items: center;
-}
+ }
 
 /* Box: Bottom Center */
 .box-flex-bottom {
     align-items: flex-end;
-}
+ }
 
 /* Box: Top Right */
 .box-flex-top-right {
     justify-content: flex-end;
-}
+ }
 
 /* Box: Top Right */
 .box-flex-top-left {
     justify-content: flex-start;
-}
+ }
 
 /* Box: Center Left */
 .box-flex-center-left {
     align-items: center;
     justify-content: flex-start;
-}
+ }
 
 /* Box: Bottom Right */
 .box-flex-bottom-right {
     align-items: flex-end;
     justify-content: flex-end;
-}
+ }
 
 /* align-self: flex-start */
 .align-start {
